# vessel_voxelizer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  example.py  pyproject.toml
.github/workflows/: wheels.yml
example/: example.ipynb  example.py
files/: example_vessels.csv
src/: vessel_voxelizer.cu
src/vessel_voxelizer/: __init__.py  utils.py
